--- a/seahub/templates/sdoc_file_view_react.html
+++ b/seahub/templates/sdoc_file_view_react.html
@@ -14,6 +14,18 @@ docUuid: '{{ file_uuid }}',
 assetsUrl: '{{ assets_url }}',
 seadocAccessToken: '{{ seadoc_access_token }}',
 seadocServerUrl: '{{ seadoc_server_url }}',
+isSdocRevision: {% if is_sdoc_revision %}true{% else %}false{% endif %},
+originDocUuid: '{{ origin_doc_uuid }}',
+originParentPath: '{{ origin_parent_path }}',
+originFilename: '{{ origin_filename }}',
+originFilePath: '{{ origin_file_path }}',
+originFileVersion: '{{ origin_file_version }}',
+publishFileVersion: '{{ publish_file_version }}',
+publisher: '{{ publisher }}',
+publisherNickname: '{{ publisher_nickname }}',
+isPublished: {% if is_published %}true{% else %}false{% endif %},
+revisionCreatedAt: '{{ revision_created_at }}',
+revisionUpdatedAt: '{{ revision_updated_at }}',
 {% endblock %}
 
 {% block render_bundle %}
