--- a/frontend/src/css/sdoc-revision.css
+++ b/frontend/src/css/sdoc-revision.css
@@ -20,7 +20,7 @@
 
 .sdoc-revision .sdoc-revision-header .sdoc-revision-header-right {
   height: 100%;
-  min-width: 100px;
+  min-width: fit-content;
 }
 
 .sdoc-revision .sdoc-revision-content {
