--- a/seahub/templates/sysadmin/user_add_email.html
+++ b/seahub/templates/sysadmin/user_add_email.html
@@ -18,8 +18,8 @@
 
 <p style="font-size:14px;color:#434144;">
 {% trans "Here is your account information:" %}<br />
-{% blocktrans %}Email: {{ email }}{% endblocktrans %}<br />
-{% blocktrans %}Password: {{ password }}{% endblocktrans %}
+{% trans "Email:" %} {{ email|escape }}<br />
+{% trans "Password:" %} {{ password|escape }}
 </p>
 
 <a href="{{ url_base }}{% url 'auth_login' %}" target="_blank">{% trans "Log In" %}</a> 
