remove autoescape when sending user add email

--- a/seahub/templates/sysadmin/user_add_email.html
+++ b/seahub/templates/sysadmin/user_add_email.html
@@ -4,26 +4,22 @@
 
 {% block email_con %}
 
-{% autoescape off %}
-
 <p style="color:#121214;font-size:14px;">{% trans "Hi," %}</p>
 
 <p style="font-size:14px;color:#434144;">
 {% if org %}
-{% blocktrans with org_name=org.org_name escaped_nickname=user|email2nickname|escape %}{{ escaped_nickname }} invited you to join organization "{{ org_name }}" on {{ site_name }}.{% endblocktrans%}
+{% blocktrans with org_name=org.org_name nickname=user|email2nickname %}{{ nickname }} invited you to join organization "{{ org_name }}" on {{ site_name }}.{% endblocktrans%}
 {% else %}
-{% blocktrans with escaped_nickname=user|email2nickname|escape %}{{ escaped_nickname }} invited you to join {{ site_name }}.{% endblocktrans%}
+{% blocktrans with nickname=user|email2nickname %}{{ nickname }} invited you to join {{ site_name }}.{% endblocktrans%}
 {% endif %}
 </p>
 
 <p style="font-size:14px;color:#434144;">
 {% trans "Here is your account information:" %}<br />
-{% blocktrans %}Email: {{ email }}{% endblocktrans %}<br />
-{% blocktrans %}Password: {{ password }}{% endblocktrans %}
+{% trans "Email:" %} {{ email }}<br />
+{% trans "Password:" %} {{ password }}
 </p>
 
 <a href="{{ url_base }}{% url 'auth_login' %}" target="_blank">{% trans "Log In" %}</a> 
-
-{% endautoescape %}
 
 {% endblock %}
