--- a/seahub/templates/sdoc_file_view_react.html
+++ b/seahub/templates/sdoc_file_view_react.html
@@ -15,6 +15,7 @@ assetsUrl: '{{ assets_url }}',
 seadocAccessToken: '{{ seadoc_access_token }}',
 seadocServerUrl: '{{ seadoc_server_url }}',
 isSdocRevision: {% if is_sdoc_revision %}true{% else %}false{% endif %},
+revisionId: '{{ revision_id }}',
 originDocUuid: '{{ origin_doc_uuid }}',
 originParentPath: '{{ origin_parent_path }}',
 originFilename: '{{ origin_filename }}',
