--- a/seahub/templates/sdoc_revision.html
+++ b/seahub/templates/sdoc_revision.html
@@ -19,6 +19,7 @@
         assetsUrl: '{{ assets_url }}',
         fileDownloadLink: '{{ file_download_link }}',
         isSdocRevision: {% if is_sdoc_revision %}true{% else %}false{% endif %},
+        revisionId: '{{ revision_id }}',
         originDocUuid: '{{ origin_doc_uuid }}',
         originFileDownloadLink: '{{ origin_file_download_link }}',
         originParentPath: '{{ origin_parent_path }}',
