[sdoc file view] displayed draft identifier & added 'unmark as draft' for drafts

--- a/frontend/src/css/dirent-list-item.css
+++ b/frontend/src/css/dirent-list-item.css
@@ -23,3 +23,15 @@
 .tag-list-title {
   overflow: hidden;
 }
+
+.sdoc-draft-identifier {
+  display: inline-block;
+  font-size: 14px;
+  color: #888;
+  background: #eee;
+  padding: 0 8px;
+  height: 20px;
+  line-height: 20px;
+  border-radius: 10px;
+  margin-left: 6px;
+}
