feat: update code

--- a/frontend/src/components/dialog/extra-attributes-dialog/index.css
+++ b/frontend/src/components/dialog/extra-attributes-dialog/index.css
@@ -11,3 +11,7 @@
   overflow-y: scroll;
   padding: 30px;
 }
+
+.extra-attributes-dialog .modal-body .form-control.disabled {
+  background-color: #f8f9fa;
+}
