--- a/media/sdoc-editor/sdoc-editor-font.css
+++ b/media/sdoc-editor/sdoc-editor-font.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: "sdocfont"; /* Project id 4097705 */
-  src: url('./sdoc-editor-font/iconfont.eot?t=1689838000925'); /* IE9 */
-  src: url('./sdoc-editor-font/iconfont.eot?t=1689838000925#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('./sdoc-editor-font/iconfont.woff2?t=1689838000925') format('woff2'),
-       url('./sdoc-editor-font/iconfont.woff?t=1689838000925') format('woff'),
-       url('./sdoc-editor-font/iconfont.ttf?t=1689838000925') format('truetype'),
-       url('./sdoc-editor-font/iconfont.svg?t=1689838000925#sdocfont') format('svg');
+  src: url('./sdoc-editor-font/iconfont.eot?t=1690191058909'); /* IE9 */
+  src: url('./sdoc-editor-font/iconfont.eot?t=1690191058909#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('./sdoc-editor-font/iconfont.woff2?t=1690191058909') format('woff2'),
+       url('./sdoc-editor-font/iconfont.woff?t=1690191058909') format('woff'),
+       url('./sdoc-editor-font/iconfont.ttf?t=1690191058909') format('truetype'),
+       url('./sdoc-editor-font/iconfont.svg?t=1690191058909#sdocfont') format('svg');
 }
 
 .sdocfont {
@@ -14,6 +14,18 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.sdoc-font-color:before {
+  content: "\e606";
+}
+
+.sdoc-highlight-color:before {
+  content: "\e605";
+}
+
+.sdoc-format-clear:before {
+  content: "\e603";
 }
 
 .sdoc-bg-color:before {
