--- a/frontend/src/css/dirent-list-item.css
+++ b/frontend/src/css/dirent-list-item.css
@@ -24,7 +24,7 @@
   overflow: hidden;
 }
 
-.sdoc-draft-identifier {
+.dirent-sdoc-draft-identifier {
   display: inline-block;
   font-size: 14px;
   color: #888;
