--- a/media/sdoc-editor/sdoc-editor-font.css
+++ b/media/sdoc-editor/sdoc-editor-font.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: "sdocfont"; /* Project id 4097705 */
-  src: url('./sdoc-editor-font/iconfont.eot?t=1691044790950'); /* IE9 */
-  src: url('./sdoc-editor-font/iconfont.eot?t=1691044790950#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('./sdoc-editor-font/iconfont.woff2?t=1691044790950') format('woff2'),
-       url('./sdoc-editor-font/iconfont.woff?t=1691044790950') format('woff'),
-       url('./sdoc-editor-font/iconfont.ttf?t=1691044790950') format('truetype'),
-       url('./sdoc-editor-font/iconfont.svg?t=1691044790950#sdocfont') format('svg');
+  src: url('./sdoc-editor-font/iconfont.eot?t=1691058253511'); /* IE9 */
+  src: url('./sdoc-editor-font/iconfont.eot?t=1691058253511#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('./sdoc-editor-font/iconfont.woff2?t=1691058253511') format('woff2'),
+       url('./sdoc-editor-font/iconfont.woff?t=1691058253511') format('woff'),
+       url('./sdoc-editor-font/iconfont.ttf?t=1691058253511') format('truetype'),
+       url('./sdoc-editor-font/iconfont.svg?t=1691058253511#sdocfont') format('svg');
 }
 
 .sdocfont {
@@ -14,6 +14,10 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.sdoc-close1:before {
+  content: "\e647";
 }
 
 .sdoc-rename:before {
@@ -267,3 +271,4 @@
 .sdoc-user:before {
   content: "\e629";
 }
+
