[pdf viewer] redesigned it: added side panel(thumbnail panel) and bottom bar(includes side panel toggle, 'file page manager', and 'zoom manager')

--- a/seahub/templates/common_file_view_react.html
+++ b/seahub/templates/common_file_view_react.html
@@ -5,6 +5,7 @@
 {% block extra_style %}
 {% if filetype == 'PDF' %}
 <link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}js/pdf/web/viewer.css" />
+<link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}js/pdf/web/custom.css" />
 <link rel="resource" type="application/l10n" href="{{ MEDIA_URL }}js/pdf/web/locale/locale.properties" />
 {% endif %}
 {% render_bundle 'fileView' 'css' %}
