[pdf file view] fixed UI of the image in the details panel

--- a/frontend/src/css/pdf-file-view.css
+++ b/frontend/src/css/pdf-file-view.css
@@ -209,6 +209,16 @@ input#pageNumber {
   z-index: 999; /* 1049: for seahub 'share' dialog */
 }
 
+.dirent-info .img .thumbnail {
+  float: none;
+  width: auto;
+  height: auto;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  border-radius: 0;
+}
+
 @media print {
   #wrapper {
     display: none;
