[pdf viewer] added loading icon; adjusted the position of the scrollb… (#5583)
* [pdf viewer] added loading icon; adjusted the position of the scrollbar of the viewer container

* [pdf file view] fixed UI of the image in the details panel

--- a/frontend/src/css/pdf-file-view.css
+++ b/frontend/src/css/pdf-file-view.css
@@ -24,8 +24,9 @@
 }
 
 #viewerContainer {
-  padding: 10px 0 32px;
+  padding: 10px 0 0;
   overflow: auto;
+  margin-bottom: 33px;
 }
 
 #viewerContainer:focus {
@@ -93,7 +94,12 @@ select#scaleSelect {
 }
 
 #loadingBar {
-  height: 0;
+  position: fixed;
+  top: 50%;
+  width: auto;
+  height: auto;
+  border: 0;
+  background: transparent;
 }
 
 input#pageNumber {
@@ -201,6 +207,16 @@ input#pageNumber {
   background-color: rgba(0, 0, 0, 0.2);
   /*z-index: 40000;*/
   z-index: 999; /* 1049: for seahub 'share' dialog */
+}
+
+.dirent-info .img .thumbnail {
+  float: none;
+  width: auto;
+  height: auto;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  border-radius: 0;
 }
 
 @media print {
