[dir view] fixed UI of buttons in top toolbar for a single selected item

--- a/frontend/src/css/dirents-menu.css
+++ b/frontend/src/css/dirents-menu.css
@@ -1,5 +1,5 @@
 .dirents-more-menu {
-  margin-left: -9px;
+  margin-left: 0;
   padding: 4px 15px;
   border: 1px solid #ccc;
   border-top-right-radius: 2px !important;
