--- a/frontend/src/css/share-link-dialog.css
+++ b/frontend/src/css/share-link-dialog.css
@@ -16,8 +16,14 @@
     padding: 1rem;
     border-bottom: 1px solid #eee;
 }
+
+.share-dialog .nav .nav-item .nav-link {
+    padding: 0.3125rem 0.25rem;
+}
+
 @media (min-width: 768px) {
   .share-dialog-content .share-dialog-side {
+    padding: 12px 8px;
     border: 0;
     border-right: 1px solid #eee;
   }
@@ -26,6 +32,7 @@
   }
   .share-dialog-side .nav-pills .nav-item .nav-link {
     width: 100%;
+    padding: 0.3125rem 0.5rem;
     margin: 0;
   }
 }
@@ -82,10 +89,6 @@
 
 .generate-link-btn {
     margin-top: 1.125rem;
-}
-
-.share-dialog .nav .nav-item .nav-link {
-    padding: 0.3125rem 0.25rem;
 }
 
 input.expire-input {
