--- a/media/css/seahub_react.css
+++ b/media/css/seahub_react.css
@@ -984,7 +984,8 @@ table td {
 .rename-container input {
     box-sizing: content-box;
     padding: 2px 3px;
-    width: 10rem;
+    width: 20rem;
+    max-width: 100%;
     height: 22px;
     line-height: 19px;
     border-radius: 2px;
@@ -998,19 +999,6 @@ table td {
     border-color: #1991eb;
     outline: 0;
     box-shadow: 0 0 0 2px rgba(70, 127, 207, 0.25);
-}
-
-.rename-container button {
-    margin-left: 0.25rem;
-    padding: 5px 6px;
-    font-size: 1rem;
-    line-height: 1;
-    color: #666;
-    min-width: 0;
-}
-
-.rename-container .confirm {
-    color: green;
 }
 
 @media (max-width: 767px) {
