--- a/frontend/src/css/dirent-detail.css
+++ b/frontend/src/css/dirent-detail.css
@@ -106,24 +106,10 @@
   list-style: none;
 }
 
-.file-tag-list li {
-  display: flex;
-  align-items: center;
-  max-width: 180px;
-}
-
-.file-tag-list .file-tag-item .file-tag {
-  width: 12px;
-  height: 12px;
-}
-
-.file-tag-list .tag-name {
-  display: inline-block;
-  margin-left: 5px;
-  width: 80px;
-  text-overflow: ellipsis;
-  overflow: hidden;
-  white-space: nowrap;
+.dirent-table-container .seafile-multicolor-icon.seafile-multicolor-icon-tag {
+  width: 20px;
+  height: 20px;
+  cursor: pointer;
 }
 
 .file-related-files th {
