--- a/frontend/src/css/dirent-detail.css
+++ b/frontend/src/css/dirent-detail.css
@@ -100,6 +100,7 @@
 .dirent-table-container .file-tag-container th {
   vertical-align: top;
   list-style: none;
+  padding-top: 8px;
 }
 
 .dirent-table-container .file-tag-container .tag-list {
